results/SpecGenBench/conversational/log-BubbleSortDesc-2023_11_27_16_51_01.txt
public class BubbleSortDesc { 
    
    //@ requires array != null;
    //@ ensures \result != null;
    //@ ensures (\forall int i; 0 <= i && i < \result.length - 1; \result[i] >= \result[i+1]);
    void swap(int x, int y,  int array[]) {
        int temp;     
        temp = array[x];
        array[x] = array[y];
        array[y] = temp;
    }

    //@ requires arr != null;
    //@ ensures \result != null;
    //@ ensures (\forall int i; 0 <= i && i < \result.length - 1; \result[i] >= \result[i+1]);
    int[] bubbleSort(int arr[]) {
        int n = arr.length;

        //@ maintaining 0 <= i && i <= n-1;
        //@ maintaining (\forall int k; 0 <= k && k < i; (\forall int j; 0 <= j && j < n-k-1; arr[j] >= arr[j+1]));
        //@ decreases n - i;
        for (int i = 0; i < n-1; i++) {	

            //@ maintaining 0 <= j && j <= n-i-1;
            //@ maintaining (\forall int k; 0 <= k && k < j; arr[k] >= arr[k+1]);
            //@ decreases n - i - j;
            for (int j = 0; j < n-i-1; j++) {
                if (arr[j+1] > arr[j]) {  
		     swap(j, j + 1, arr); 
                } 
	    }
	} 
	return arr;
    } 
}
/home/max/Documents/JMLGPT/tmp/BubbleSortDesc.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result != null;
                 ^
/home/max/Documents/JMLGPT/tmp/BubbleSortDesc.java:5: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures (\forall int i; 0 <= i && i < \result.length - 1; \result[i] >= \result[i+1]);
                                               ^
/home/max/Documents/JMLGPT/tmp/BubbleSortDesc.java:5: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures (\forall int i; 0 <= i && i < \result.length - 1; \result[i] >= \result[i+1]);
                                                                   ^
/home/max/Documents/JMLGPT/tmp/BubbleSortDesc.java:5: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures (\forall int i; 0 <= i && i < \result.length - 1; \result[i] >= \result[i+1]);
                                                                                 ^
4 errors

public class BubbleSortDesc { 
    
    //@ requires array != null;
    //@ ensures (\forall int i; 0 <= i && i < array.length - 1; array[i] >= array[i+1]);
    void swap(int x, int y,  int array[]) {
        int temp;     
        temp = array[x];
        array[x] = array[y];
        array[y] = temp;
    }

    //@ requires arr != null;
    //@ ensures \result != null;
    //@ ensures (\forall int i; 0 <= i && i < \result.length - 1; \result[i] >= \result[i+1]);
    int[] bubbleSort(int arr[]) {
        int n = arr.length;

        //@ maintaining 0 <= i && i <= n-1;
        //@ maintaining (\forall int k; 0 <= k && k < i; (\forall int j; 0 <= j && j < n-k-1; arr[j] >= arr[j+1]));
        //@ decreases n - i;
        for (int i = 0; i < n-1; i++) {	

            //@ maintaining 0 <= j && j <= n-i-1;
            //@ maintaining (\forall int k; 0 <= k && k < j; arr[k] >= arr[k+1]);
            //@ decreases n - i - j;
            for (int j = 0; j < n-i-1; j++) {
                if (arr[j+1] > arr[j]) {  
		     swap(j, j + 1, arr); 
                } 
	    }
	} 
	return arr;
    } 
}
